@@ -237,6 +237,7 @@ $string['stock']='Stock';
 $string['deletecommunitygroups']='You have requested to delete these groups. This will mean the groups are not available to use in the future and any student memberships will be cancelled with immediate effect.';
 $string['fees']='Fees';
 $string['charges']='Charges';
+$string['charge']='Charge';
 $string['concept']='Concept';
 $string['due']='Pending';
 $string['issue']='Issue';
@@ -246,6 +247,7 @@ $string['applied']='Applied';
 $string['account']='Account';
 $string['cash']='Cash';
 $string['payment']='Payment';
+$string['paymenttype']='Payment type';
 $string['novalidbankaccount']='No valid bank account';
 $string['nopayeeset']='No payee set';
 $string['conceptlist']='Concepts';
